Updating text size to prevent overflow on Pi screen

--- a/index.css
+++ b/index.css
@@ -56,13 +56,13 @@ body {
 }
 
 #bpmDisplay {
-  font-size: 1em;
+  font-size: 1em; /* Smaller text in the BPM input */
   height: 1.5em;
-  width: 1.5em;
+  width: 2em;
   min-width: 0;
-  max-width: 2em;
-  text-align: center; /* Center the text */
-  padding: 0 2px;
+  max-width: 2.5em;
+  text-align: center;
+  padding: 0;
   box-sizing: border-box;
 }
 
@@ -224,7 +224,7 @@ body {
 
 #current-song-part {
   color: #fff;
-  font-size: 16em; /* Twice as large as previous 8em */
+  font-size: 10em; /* Reduced from 16em */
   font-weight: bold;
   text-align: center;
   margin: 0;
@@ -258,7 +258,7 @@ body {
 
 #next-song-part {
   color: #bbbbbb;
-  font-size: 8em; /* Twice as large as previous 4em */
+  font-size: 5em; /* Reduced from 8em */
   text-align: left;
   margin: 0 0 0 0.2em;
   display: none; /* Shown via JS when appropriate */
